--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Federico Menozzi <federicogmenozzi@gmail.com>"]
 gfx = "0.14"
 gfx_window_glutin = "0.14"
 glutin = "0.7"
+clap = { version = "2.23.2", features = ["yaml"] }
