Start work on adding example runners

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,11 @@ gfx = "0.14"
 gfx_window_glutin = "0.14"
 glutin = "0.7"
 clap = { version = "2.23.2", features = ["yaml"] }
+
+[[example]]
+name = "seascape"
+path = "examples/seascape/main.rs"
+
+[[example]]
+name = "elemental-ring"
+path = "examples/elemental-ring/main.rs"
