--- a/src/cli.yml
+++ b/src/cli.yml
@@ -22,22 +22,22 @@ args:
     - texture0:
         long: texture0
         takes_value: true
-        default_value: "textures/brickwall.jpg"
+        default_value: "textures/01-brickwall.jpg"
         help: Path to 2D RGBA texture for iChannel0
     - texture1:
         long: texture1
         takes_value: true
-        default_value: "textures/landscape.jpg"
+        default_value: "textures/02-landscape.jpg"
         help: Path to 2D RGBA texture for iChannel1
     - texture2:
         long: texture2
         takes_value: true
-        default_value: "textures/whitenoise.jpg"
+        default_value: "textures/03-whitenoise.jpg"
         help: Path to 2D RGBA texture for iChannel2
     - texture3:
         long: texture3
         takes_value: true
-        default_value: "textures/woodgrain.jpg"
+        default_value: "textures/04-woodgrain.jpg"
         help: Path to 2D RGBA texture for iChannel3
     - shader:
         short: s
