Add basic logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ gfx_window_glutin = "0.14"
 glutin = "0.7"
 clap = { version = "2.23.2", features = ["yaml"] }
 image = "0.13"
+log = "0.3"
+env_logger = "0.3"
