--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "shadertoy-rs"
 version = "0.1.0"
 authors = ["Federico Menozzi <federicogmenozzi@gmail.com>"]
+description = "A desktop client for Shadertoy written in Rust"
+documentation = "https://github.com/fmenozzi/shadertoy-rs"
+homepage = "https://github.com/fmenozzi/shadertoy-rs"
+repository = "https://github.com/fmenozzi/shadertoy-rs"
+readme = "README.md"
+license = "MIT"
+keywords = ["shadertoy", "graphics", "shaders"]
+categories = ["rendering"]
 
 [dependencies]
 gfx = "0.14"
