--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ clap = { version = "2.23.2", features = ["yaml"] }
 image = "0.13"
 log = "0.3"
 env_logger = "0.3"
+
+[[bin]]
+path = "src/main.rs"
+name = "shadertoy"
