--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ clap = { version = "2.23.2", features = ["yaml"] }
 image = "0.13"
 log = "0.3"
 env_logger = "0.3"
+hyper = "0.7"
+url = "1.4"
+serde_json = "1.0"
 
 [[bin]]
 path = "src/main.rs"
