--- a/src/cli.yml
+++ b/src/cli.yml
@@ -14,6 +14,12 @@ subcommands:
                 index: 1
                 required: true
                 help: Shader id from Shadertoy URL
+            - run:
+                takes_value: false
+                required: false
+                short: r
+                long: run
+                help: Also run downloaded shader
 args:
     - width:
         short: W
