--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.3"
 env_logger = "0.3"
 serde_json = "1.0"
 reqwest = "0.8"
+clippy = { version = "*", optional = true }
 
 [[bin]]
 path = "src/main.rs"
