--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ env_logger = "0.3"
 serde_json = "1.0"
 reqwest = "0.8"
 clippy = { version = "0.*", optional = true }
+failure = "0.1.1"
+failure_derive = "0.1.1"
 
 [[bin]]
 path = "src/main.rs"
