--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ image = "0.13"
 log = "0.3"
 env_logger = "0.3"
 serde_json = "1.0"
-reqwest = "0.8"
+reqwest = "~0.9"
 clippy = { version = "0.*", optional = true }
 failure = "0.1.1"
 failure_derive = "0.1.1"
