--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ keywords = ["shadertoy", "graphics", "shaders"]
 categories = ["rendering"]
 
 [dependencies]
-gfx = "0.17"
-gfx_window_glutin = "0.21"
-glutin = "0.13"
+gfx = "0.18.2"
+gfx_device_gl="0.16.2"
+gfx_window_glutin = "0.31.0"
+glutin = "0.27.0"
+old_school_gfx_glutin_ext="0.27.0"
 clap = { version = "2.23.2", features = ["yaml"] }
 image = "0.13"
 log = "0.3"
@@ -23,8 +25,8 @@ serde_json = "1.0"
 notify = "4.0.3"
 reqwest = "~0.9"
 clippy = { version = "0.*", optional = true }
-failure = "0.1.1"
-failure_derive = "0.1.1"
+failure = "0.1.8"
+failure_derive = "0.1.8"
 
 [[bin]]
 path = "src/main.rs"
