use 'repeat' for default wrapping as on shadertoy.com

--- a/src/cli.yml
+++ b/src/cli.yml
@@ -52,26 +52,26 @@ args:
     - wrap0:
         long: wrap0
         takes_value: true
-        default_value: "clamp"
-        possible_values: ["clamp", "tile", "mirror", "border"]
+        default_value: "repeat"
+        possible_values: ["clamp", "repeat", "mirror", "border"]
         help: Wrap mode for iChannel0
     - wrap1:
         long: wrap1
         takes_value: true
-        default_value: "clamp"
-        possible_values: ["clamp", "tile", "mirror", "border"]
+        default_value: "repeat"
+        possible_values: ["clamp", "repeat", "mirror", "border"]
         help: Wrap mode for iChannel1
     - wrap2:
         long: wrap2
         takes_value: true
-        default_value: "clamp"
-        possible_values: ["clamp", "tile", "mirror", "border"]
+        default_value: "repeat"
+        possible_values: ["clamp", "repeat", "mirror", "border"]
         help: Wrap mode for iChannel2
     - wrap3:
         long: wrap3
         takes_value: true
-        default_value: "clamp"
-        possible_values: ["clamp", "tile", "mirror", "border"]
+        default_value: "repeat"
+        possible_values: ["clamp", "repeat", "mirror", "border"]
         help: Wrap mode for iChannel3
     - filter0:
         long: filter0
