Replace failure crate with anyhow.
Failure seems to be no longer maintained/recommended, and anyhow seemed
like the easiest replacement.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,7 @@ serde_json = "1.0"
 notify = "4.0.3"
 reqwest = "~0.9"
 clippy = { version = "0.*", optional = true }
-failure = "0.1.8"
-failure_derive = "0.1.8"
+anyhow = "1.0.0"
 
 [[bin]]
 path = "src/main.rs"
