--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ notify = "4.0.3"
 reqwest = "~0.9"
 clippy = { version = "0.*", optional = true }
 anyhow = "1.0.0"
+gfx_gl = "0.6.1"
 
 [[bin]]
 path = "src/main.rs"
